--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "better-sqlite3": "^8.6.0",
+    "knex": "^2.5.1",
     "music-metadata": "^8.1.4",
     "sanitize-filename": "^1.6.3"
   }
