--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "better-sqlite3": "^8.6.0",
-    "knex": "^2.5.1",
+    "commander": "^12.0.0",
     "music-metadata": "^8.1.4",
-    "sanitize-filename": "^1.6.3"
+    "music-metadata-search": "^2.2.0",
+    "sanitize-filename": "^1.6.3",
+    "unstorage": "^1.10.2"
   }
 }
