--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "music-similar-graph",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "main.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^2.11.2",
+    "cli-progress": "^3.12.0",
     "commander": "^12.0.0",
+    "graphology": "^0.25.4",
+    "graphology-canvas": "^0.4.2",
+    "graphology-layout": "^0.6.1",
+    "graphology-layout-force": "^0.2.4",
+    "graphology-svg": "^0.1.3",
     "music-metadata": "^8.1.4",
     "music-metadata-search": "^2.2.0",
     "sanitize-filename": "^1.6.3",
