--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "graphology-canvas": "^0.4.2",
     "graphology-layout": "^0.6.1",
     "graphology-layout-force": "^0.2.4",
+    "graphology-layout-noverlap": "^0.4.2",
     "graphology-svg": "^0.1.3",
     "music-metadata": "^8.1.4",
     "music-metadata-search": "^2.2.0",
     "sanitize-filename": "^1.6.3",
-    "unstorage": "^1.10.2"
+    "sigma": "^3.0.0-beta.18",
+    "unstorage": "^1.10.2",
+    "vite": "^5.2.11"
   }
 }
