--- a/package.json
+++ b/package.json
@@ -1,17 +1,29 @@
 {
-  "name": "music-similar-graph",
+  "name": "music-similar-artists-network-graph",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "better-sqlite3": "^8.6.0",
-    "knex": "^2.5.1",
+    "canvas": "^2.11.2",
+    "cli-progress": "^3.12.0",
+    "commander": "^12.0.0",
+    "graphology": "^0.25.4",
+    "graphology-canvas": "^0.4.2",
+    "graphology-layout": "^0.6.1",
+    "graphology-layout-force": "^0.2.4",
+    "graphology-layout-noverlap": "^0.4.2",
+    "graphology-svg": "^0.1.3",
     "music-metadata": "^8.1.4",
-    "sanitize-filename": "^1.6.3"
+    "music-metadata-search": "^2.2.0",
+    "sanitize-filename": "^1.6.3",
+    "sigma": "^3.0.0-beta.18",
+    "unstorage": "^1.10.2",
+    "vite": "^5.2.11"
   }
 }
